tests/miniJava/pos/000661_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) System.out.println ( { } ) ; else System.out.println ( { } ) ; } }
