tests/miniJava/neg/000060_mutation.MiniJava
class java { extends static void Main ( String [ ] java ) { { } } }
